IS-2 - Refactoring code and small improvements

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<!-- Change me -->
-	<groupId>com.mab.order</groupId>
+	<groupId>com.mgs.order</groupId>
 	<artifactId>order-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>order-service</name>
